--- a/lesson6/sample11-3.html
+++ b/lesson6/sample11-3.html
@@ -88,10 +88,11 @@
           // ラジアンに変換する
           const radian = (rot * Math.PI) / 180;
           // 角度に応じてカメラの位置を設定
-          camera.position.x = 1000 * Math.sin(radian);
-          camera.position.z = 1000 * Math.cos(radian);
+          //camera.position.x = 1000 * Math.sin(radian);
+          //camera.position.z = 1000 * Math.cos(radian);
           // 原点方向を見つめる
-          camera.lookAt(new THREE.Vector3(0, 0, 0));
+          //camera.lookAt(new THREE.Vector3(0, 0, 0));
+
           renderer.render(scene, camera);
           requestAnimationFrame(tick);
         }
