--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -13,6 +13,7 @@
             <li><a href="sample11-1.html">グループでFogなし</a></li>
             <li><a href="sample11-2.html">グループでFogあり</a></li>
             <li><a href="sample11-3.html">スプライト（ビルボード）でFogあり</a></li>
+            <li><a href="sample11-4.html">パーティクルでFogあり</a></li>
         </ul>
     </p>
     <p>
