--- a/lesson6/sample11-4.html
+++ b/lesson6/sample11-4.html
@@ -32,7 +32,7 @@
 
         // マテリアルを作成
         const material = new THREE.MeshStandardMaterial({
-          map: new THREE.TextureLoader().load('imgs/earthmap1k.jpg'),
+          map: new THREE.TextureLoader().load('img/earth.png'),
           side: THREE.DoubleSide,
         });
 
