--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -13,12 +13,12 @@
             <li><a href="sample11-1.html">グループでFogなし</a></li>
             <li><a href="sample11-2.html">グループでFogあり</a></li>
             <li><a href="sample11-3.html">スプライト（ビルボード）でFogあり</a></li>
-            <li><a href="sample11-4.html">パーティクルでFogあり</a></li>
         </ul>
     </p>
     <p>
-        多くの物体を表示：
+        本来のパーティクル：
         <ul>
+            <li><a href="sample11-4.html">パーティクル</a></li>
             <li><a href="sample4.html">3dsMaxで作ったデータ</a></li>
             <li><a href="sample5.html">3dsMaxで作ったデータ</a></li>
             <li><a href="sample6.html">3dsMaxで作ったデータ</a></li>
