--- a/lesson6/sample6.html
+++ b/lesson6/sample6.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="ja">
+<html>
   <head>
     <meta charset="utf-8" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
