--- a/lesson3/sample7-cit(2).html
+++ b/lesson3/sample7-cit(2).html
@@ -1,94 +1,100 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>sample_Mapping2</title>
-
-  <!-- three.jsを読み込む(ローカル) -->
-  <!-- <script src="./three.js"></script> -->
-  <!-- three.jsを読み込む(CDN) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/99/three.min.js"></script>
-
-</head>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
+  </head>
 <body>
  <script>
-  var init = function() {
+      // ページの読み込みを待つ
+      window.addEventListener('DOMContentLoaded', init);
 
-    var width = 800,
-        height = 600;
-  
-    // レンダラーを作成
-    var renderer = new THREE.WebGLRenderer();
-    renderer.setSize(width, height);
-    document.body.appendChild(renderer.domElement);
-  
-    // シーンを作成
-    var scene = new THREE.Scene();
-  
-    // カメラを作成
-  var camera = new THREE.PerspectiveCamera(45, width / height, 1, 1000);
+      function init() {
+        // サイズを指定
+        const width = 800
+        const height = 600;
 
-// テクスチャー読み込み
-var textureLoader = new THREE.TextureLoader();  
-  var texture = textureLoader.load("cit.png");
-  var mat = new THREE.MeshPhongMaterial();
-  mat.map = texture;
+        // レンダラーを作成
+        var renderer = new THREE.WebGLRenderer();
+        document.body.appendChild(renderer.domElement);
+        renderer.setSize(width, height);
 
-  // 箱を作成
-  var geometry1 = new THREE.BoxGeometry(1, 1, 1);
-  var box = new THREE.Mesh(geometry1, mat);
-  box.position.set(1.5,0,-5);
-  scene.add(box);
+        // シーンを作成
+        const scene = new THREE.Scene();
 
-  // 球を作成
-  var geometry2 = new THREE.SphereGeometry(0.5, 32, 32 ); ;
-  var Sphere = new THREE.Mesh(geometry2, mat);
-  Sphere.position.set(0,0,-5);
-  scene.add(Sphere);
+        // カメラを作成
+        const camera = new THREE.PerspectiveCamera(45, width / height);
+        // カメラの初期座標を設定
+        camera.position.set(0, 0, 5);
 
-  // 円柱を作成
-  var geometry3 = new THREE.CylinderGeometry( 0, 0.5, 1, 20, 4 );
-  var Cylinder = new THREE.Mesh(geometry3, mat);
-  Cylinder.position.set(-1.5,0,-5);
-  scene.add(Cylinder);
+        // カメラコントローラーを作成
+        const controls = new THREE.OrbitControls(camera, document.body); 
+        
+        // 平行光源1
+        var directionalLight1 = new THREE.DirectionalLight(0xffffff);
+        directionalLight1.position.set(10, 10, 10);
+        // シーンに追加
+        scene.add(directionalLight1);
+        // 平行光源2
+        var directionalLight2 = new THREE.DirectionalLight(0x888888);
+        directionalLight2.position.set(-10, -10, 10);
+        // シーンに追加
+        scene.add(directionalLight2);
 
-  // 平行光源
-  var directionalLight1 = new THREE.DirectionalLight(0xffffff);
-  directionalLight1.position.set(1, 1, 1);
-  // シーンに追加
-  scene.add(directionalLight1);
+        // helper
+        const gridHelper = new THREE.GridHelper(2,10); // size, step
+        scene.add(gridHelper);
+        const axisHelper = new THREE.AxisHelper(2); //軸の長さ　X：赤、Y：緑、z：青
+        scene.add(axisHelper);
 
-  var directionalLight2 = new THREE.DirectionalLight(0xffffff);
-  directionalLight2.position.set(-10, 1, 1);
-  // シーンに追加
-  scene.add(directionalLight2);
+        // テクスチャー読み込み
+        var textureLoader = new THREE.TextureLoader();  
+        var texture = textureLoader.load("cit.png");
+        var mat = new THREE.MeshPhongMaterial();
+        mat.map = texture;
 
- var directionalLight3 = new THREE.DirectionalLight(0xffffff);
-  directionalLight3.position.set(1, -10, 1);
-  // シーンに追加
-  scene.add(directionalLight3);
+        // 箱を作成
+        var geometry1 = new THREE.BoxGeometry(1, 1, 1);
+        //var material = new THREE.MeshPhongMaterial({ color: 0xffffff });
+        //var box = new THREE.Mesh(geometry, material);
+        var box = new THREE.Mesh(geometry1, mat);
+        box.position.set(-1.5,0,0); //位置を指定
+        scene.add(box);   // シーンに追加
 
-  // 初回実行
-  var update = function() {
-    requestAnimationFrame(update);
+        // 球を作成
+        var geometry2 = new THREE.SphereGeometry(0.5, 32, 32 ); ;
+        var Sphere = new THREE.Mesh(geometry2, mat);
+        Sphere.position.set(0,0,0);
+        scene.add(Sphere);
 
-    // 箱を回転させる
-    box.rotation.x += 0.01;
-    box.rotation.y += 0.01;
+        // 円柱を作成
+        var geometry3 = new THREE.CylinderGeometry( 0, 0.5, 1, 20, 4 );
+        var Cylinder = new THREE.Mesh(geometry3, mat);
+        Cylinder.position.set(1.5,0,0);
+        scene.add(Cylinder);
 
-    // 箱を回転させる
-    Sphere.rotation.x += 0.01;
-    Sphere.rotation.y += 0.01;
 
-    // 円柱を回転させる
-    Cylinder.rotation.x += 0.01;
-    Cylinder.rotation.y += 0.01;
+        update();
 
-    renderer.render(scene, camera);
-  };
-  update();
-}
-  window.addEventListener('DOMContentLoaded', init);
-</script>
+        // 毎フレーム時に実行されるループイベントです
+        function update() {
+          // レンダリング
+          renderer.render(scene, camera);
+          requestAnimationFrame(update);
+
+           // 箱を回転させる
+          box.rotation.x += 0.01;
+          box.rotation.y += 0.01;
+
+          // 箱を回転させる
+          Sphere.rotation.x += 0.01;
+          Sphere.rotation.y += 0.01;
+
+          // 円柱を回転させる
+          Cylinder.rotation.x += 0.01;
+          Cylinder.rotation.y += 0.01;
+        }
+      }
+    </script>
 </body>
 </html>
