--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -15,7 +15,7 @@
             <li><a href="sample7-cit(3).html">sample7-cit(3).html</a></li>
         </ul>
         顔のテクスチャ―：<a href="sample7-face.html">sample7-face.html</a><br>
-        ビルを作る：<a href="sample7-buil.html">sample7-buil.html</a><br>
+        ビル（実写画像を使う）を作る：<a href="sample7-buil.html">sample7-buil.html</a><br>
         バンプマッピング例：<a href="sample7-bump.html">sample7-bunp.html</a><br>
     </p>
 </body>
