--- a/lesson3/sample7-buil.html
+++ b/lesson3/sample7-buil.html
@@ -61,7 +61,7 @@
 
         // 平面を作成
         var planeGeometry = new THREE.PlaneGeometry(5,5,5,5);
-        var planeMaterial = new THREE.MeshBasicMaterial({color: 0x00ff00});
+        var planeMaterial = new THREE.MeshBasicMaterial({color: 0x734e30});
         var plane = new THREE.Mesh(planeGeometry,planeMaterial);
         plane.rotation.set( -Math.PI/2, 0, 0 );
         plane.position.set(0,0,0);
