--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -10,7 +10,7 @@
     <p>
         インタラクティブ（オービットコントロール）例：
         <ul>
-            <li><a href="sample8-1.html">sample8-1.html（単純な図形）</a></li>
+            <li><a href="sample8-1.html">sample8-1.html（単純な図形,背景色変更）</a></li>
             <li><a href="sample8-2.html">sample8-2.html（テクスチャ―付き）</a></li>
         </ul>
         ビルボード例：
