--- a/lesson4/sample8-1.html
+++ b/lesson4/sample8-1.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
-<html lang="ja">
+<html>
   <head>
     <meta charset="utf-8" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-    <script src="OrbitControls.js"></script>
-    <script>
+    <script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
+  </head>
+<body>
+ <script>
       // ページの読み込みを待つ
-      window.addEventListener('load', init);
+      window.addEventListener('DOMContentLoaded', init);
 
       function init() {
         // サイズを指定
-        const width = 960;
-        const height = 540;
+        const width = 800
+        const height = 600;
 
         // レンダラーを作成
-        const renderer = new THREE.WebGLRenderer({
-          canvas: document.querySelector('#myCanvas')
-        });
+        var renderer = new THREE.WebGLRenderer();
+        document.body.appendChild(renderer.domElement);
         renderer.setSize(width, height);
 
         // シーンを作成
@@ -25,41 +25,48 @@
         // カメラを作成
         const camera = new THREE.PerspectiveCamera(45, width / height);
         // カメラの初期座標を設定
-        camera.position.set(0, 0, 1000);
+        camera.position.set(0, 0, 5);
 
         // カメラコントローラーを作成
-        const controls = new THREE.OrbitControls(camera,document.body);
-  
+        const controls = new THREE.OrbitControls(camera, document.body); 
+        
         // 平行光源1
         var directionalLight1 = new THREE.DirectionalLight(0xffffff);
-        directionalLight1.position.set(100, 100, 100);
+        directionalLight1.position.set(10, 10, 10);
         // シーンに追加
         scene.add(directionalLight1);
         // 平行光源2
-        var directionalLight2 = new THREE.DirectionalLight(0xffffff);
-        directionalLight2.position.set(-100, 100, 100);
+        var directionalLight2 = new THREE.DirectionalLight(0x888888);
+        directionalLight2.position.set(-10, -10, 10);
         // シーンに追加
         scene.add(directionalLight2);
 
-        // 箱を作成(原点に作成)
-        var geometry = new THREE.BoxGeometry(300, 300, 300);
+        // helper
+        const gridHelper = new THREE.GridHelper(2,10); // size, step
+        scene.add(gridHelper);
+        const axisHelper = new THREE.AxisHelper(2); //軸の長さ　X：赤、Y：緑、z：青
+        scene.add(axisHelper);
+
+        // 箱を作成
+        var geometry = new THREE.BoxGeometry(1, 1, 1);
         var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
         var box = new THREE.Mesh(geometry, material);
-        scene.add(box);
+        box.position.set(0,0,0); //位置を指定
+        scene.add(box);   // シーンに追加
 
-        tick();
+        update();
 
         // 毎フレーム時に実行されるループイベントです
-        function tick() {
+        function update() {
           // レンダリング
           renderer.render(scene, camera);
-          requestAnimationFrame(tick);
+          requestAnimationFrame(update);
+
+           // 箱を回転させる
+          box.rotation.x += 0.01;
+          box.rotation.y += 0.01;
+
         }
       }
     </script>
-  </head>
-
-  <body>
-    <canvas id="myCanvas"></canvas>
-  </body>
-</html>
+</body>
