背景色設定

--- a/lesson4/sample8-1.html
+++ b/lesson4/sample8-1.html
@@ -18,6 +18,9 @@
         var renderer = new THREE.WebGLRenderer();
         document.body.appendChild(renderer.domElement);
         renderer.setSize(width, height);
+        // 背景の色を設定
+        renderer.setClearColor(0xffffff);
+
 
         // シーンを作成
         const scene = new THREE.Scene();
