背景再設定

--- a/lesson4/sample8-1.html
+++ b/lesson4/sample8-1.html
@@ -19,7 +19,7 @@
         document.body.appendChild(renderer.domElement);
         renderer.setSize(width, height);
         // 背景の色を設定
-        renderer.setClearColor(0xffffff);
+        renderer.setClearColor(0xffffdd);
 
 
         // シーンを作成
