タイトルつけた

--- a/lesson4/sample8-1.html
+++ b/lesson4/sample8-1.html
@@ -5,6 +5,8 @@
     <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
   </head>
 <body>
+ <h1>背景色を付けた</h1>
+ 背景色をつけてみた
  <script>
       // ページの読み込みを待つ
       window.addEventListener('DOMContentLoaded', init);
