--- a/lesson4/sample8-2.html
+++ b/lesson4/sample8-2.html
@@ -1,23 +1,29 @@
-<!DOCTYPE html>
-<html lang="ja">
+<html>
   <head>
     <meta charset="utf-8" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-    <script src="OrbitControls.js"></script>
-    <script>
+    <script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
+  </head>
+<body>
+ <h1>板ポリにテクスチャ―</h1>
+ 板ポリにテクスチャ―貼ってみた<br>
+ 非透過と透過
+ <script>
       // ページの読み込みを待つ
-      window.addEventListener('load', init);
+      window.addEventListener('DOMContentLoaded', init);
 
       function init() {
         // サイズを指定
-        const width = 960;
-        const height = 540;
+        const width = 800
+        const height = 600;
 
         // レンダラーを作成
-        const renderer = new THREE.WebGLRenderer({
-          canvas: document.querySelector('#myCanvas')
-        });
+        var renderer = new THREE.WebGLRenderer();
+        document.body.appendChild(renderer.domElement);
         renderer.setSize(width, height);
+        // 背景の色を設定
+        renderer.setClearColor(0xffffdd);
+
 
         // シーンを作成
         const scene = new THREE.Scene();
@@ -25,46 +31,56 @@
         // カメラを作成
         const camera = new THREE.PerspectiveCamera(45, width / height);
         // カメラの初期座標を設定
-        camera.position.set(0, 0, 1000);
+        camera.position.set(0, 0, 5);
 
         // カメラコントローラーを作成
-        const controls = new THREE.OrbitControls(camera,document.body);
-  
+        const controls = new THREE.OrbitControls(camera, document.body); 
+        
         // 平行光源1
         var directionalLight1 = new THREE.DirectionalLight(0xffffff);
-        directionalLight1.position.set(100, 100, 100);
+        directionalLight1.position.set(10, 10, 10);
         // シーンに追加
         scene.add(directionalLight1);
         // 平行光源2
-        var directionalLight2 = new THREE.DirectionalLight(0xffffff);
-        directionalLight2.position.set(-100, 100, 100);
+        var directionalLight2 = new THREE.DirectionalLight(0x888888);
+        directionalLight2.position.set(-10, -10, 10);
         // シーンに追加
         scene.add(directionalLight2);
 
-        // テクスチャー読み込み
+        // helper
+        const gridHelper = new THREE.GridHelper(2,10); // size, step
+        scene.add(gridHelper);
+        const axisHelper = new THREE.AxisHelper(2); //軸の長さ　X：赤、Y：緑、z：青
+        scene.add(axisHelper);
+
+        // 木テクスチャー読み込み
         var textureLoader = new THREE.TextureLoader();  
-        var texture = textureLoader.load("img/earth.png");
-        var mat = new THREE.MeshPhongMaterial();
-        mat.map = texture;
+        var texture0 = textureLoader.load("img/tree0.png");
+        //var mat0 = new THREE.MeshLambertMaterial({transparent: true});
+        mat0.map = texture0;
+        //
+        var mat1 = new THREE.MeshLambertMaterial({transparent: true});
+        mat1.map = texture0;
 
-        // 地球を作成(原点に作成)
-        var geometry = new THREE.SphereGeometry(300, 30, 30);
-        var earth = new THREE.Mesh(geometry, mat);
-        scene.add(earth);
-
-        tick();
+        // 板ポリ左を作成
+        var geometry = new THREE.PlaneGeometry(1, 1);
+        var tree0 = new THREE.Mesh(geometry, mat0);
+        box.position.set(-1.5,0,0); //位置を指定
+        scene.add(tree0);
+        // 板ポリ右を作成
+        var geometry = new THREE.PlaneGeometry(1, 1);
+        var tree1 = new THREE.Mesh(geometry, mat0);
+        box.position.set(1.5,0,0); //位置を指定
+        scene.add(tree1);
+        
+        update();
 
         // 毎フレーム時に実行されるループイベントです
-        function tick() {
+        function update() {
           // レンダリング
           renderer.render(scene, camera);
-          requestAnimationFrame(tick);
+          requestAnimationFrame(update);
         }
       }
     </script>
-  </head>
-
-  <body>
-    <canvas id="myCanvas"></canvas>
-  </body>
-</html>
+</body>
