--- a/lesson4/sample8-2.html
+++ b/lesson4/sample8-2.html
@@ -56,22 +56,23 @@
         // 木テクスチャー読み込み
         var textureLoader = new THREE.TextureLoader();  
         var texture0 = textureLoader.load("img/tree0.png");
+        // 板ポリ左用
         var mat0 = new THREE.MeshLambertMaterial();
         mat0.map = texture0;
-        //
+        // 板ポリ右用
         var mat1 = new THREE.MeshLambertMaterial({transparent: true});
         mat1.map = texture0;
 
         // 板ポリ左を作成
         var geometry = new THREE.PlaneGeometry(1, 1);
         var tree0 = new THREE.Mesh(geometry, mat0);
-        box.position.set(-1.5,0,0); //位置を指定
+        tree0.position.set(-1.5,0,0); //位置を指定
         scene.add(tree0);
-        
+
         // 板ポリ右を作成
         var geometry = new THREE.PlaneGeometry(1, 1);
         var tree1 = new THREE.Mesh(geometry, mat1);
-        box.position.set(1.5,0,0); //位置を指定
+        tree1.position.set(1.5,0,0); //位置を指定
         scene.add(tree1);
         
         update();
