--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -6,18 +6,18 @@
 </head>
 <body>
     <h1>WebGL演習（４）</h1>
-    <h2>インタラクティブとビルボード</h2>
+    <h2>ビルボード</h2>
     <p>
-        インタラクティブ（オービットコントロール）例：
+        背景色設定と板ポリ：
         <ul>
             <li><a href="sample8-1.html">sample8-1.html（単純な図形,背景色変更）</a></li>
-            <li><a href="sample8-2.html">sample8-2.html（テクスチャ―付き）</a></li>
+            <li><a href="sample8-2.html">sample8-2.html（板ポリにテクスチャ―付き）</a></li>
         </ul>
         ビルボード例：
         <ul>
-            <li><a href="sample8-3.html">sample8-3.html</a></li>
-            <li><a href="sample8-4.html">sample8-4.html</a></li>
-            <li><a href="sample8-5.html">sample8-5html</a></li>
+            <li><a href="sample8-3.html">sample8-3.html（Spriteを使う）</a></li>
+            <li><a href="sample8-4.html">sample8-4.html（森をつくる）</a></li>
+            <li><a href="sample8-5.html">sample8-5html（星と太陽）</a></li>
         </ul>       
     </p>
 </body>
