--- a/lesson4/sample8-3.html
+++ b/lesson4/sample8-3.html
@@ -1,25 +1,29 @@
-<!DOCTYPE html>
-<html lang="ja">
+<html>
   <head>
     <meta charset="utf-8" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-    <script src="OrbitControls.js"></script>
-    <script>
+    <script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
+  </head>
+<body>
+ <h1>板ポリにテクスチャ―</h1>
+ 板ポリにテクスチャ―貼ってみた<br>
+ 非透過と透過
+ <script>
       // ページの読み込みを待つ
-      window.addEventListener('load', init);
+      window.addEventListener('DOMContentLoaded', init);
 
       function init() {
         // サイズを指定
-        const width = 960;
-        const height = 540;
+        const width = 800
+        const height = 600;
 
         // レンダラーを作成
-        const renderer = new THREE.WebGLRenderer({
-          canvas: document.querySelector('#myCanvas')
-        });
+        var renderer = new THREE.WebGLRenderer();
+        document.body.appendChild(renderer.domElement);
         renderer.setSize(width, height);
         // 背景の色を設定
-        renderer.setClearColor(0xeeeeff);
+        renderer.setClearColor(0xffffdd);
+
 
         // シーンを作成
         const scene = new THREE.Scene();
@@ -27,77 +31,53 @@
         // カメラを作成
         const camera = new THREE.PerspectiveCamera(45, width / height);
         // カメラの初期座標を設定
-        camera.position.set(0, 0, 1000);
+        camera.position.set(0, 0, 5);
 
         // カメラコントローラーを作成
-        const controls = new THREE.OrbitControls(camera,document.body);
-  
+        const controls = new THREE.OrbitControls(camera, document.body); 
+        
         // 平行光源1
         var directionalLight1 = new THREE.DirectionalLight(0xffffff);
-        directionalLight1.position.set(100, 100, 100);
+        directionalLight1.position.set(10, 10, 10);
         // シーンに追加
         scene.add(directionalLight1);
         // 平行光源2
-        var directionalLight2 = new THREE.DirectionalLight(0xffffff);
-        directionalLight2.position.set(-100, 100, 100);
+        var directionalLight2 = new THREE.DirectionalLight(0x888888);
+        directionalLight2.position.set(-10, -10, 10);
         // シーンに追加
         scene.add(directionalLight2);
 
-        // 木0テクスチャー読み込み
+        // helper
+        const gridHelper = new THREE.GridHelper(2,10); // size, step
+        scene.add(gridHelper);
+        const axisHelper = new THREE.AxisHelper(2); //軸の長さ　X：赤、Y：緑、z：青
+        scene.add(axisHelper);
+
+        // 木をスプライトで作成
         var textureLoader = new THREE.TextureLoader();  
-        var texture0 = textureLoader.load("img/tree0.png");
-        var mat0 = new THREE.MeshLambertMaterial({transparent: true});
-        mat0.map = texture0;
+        var texture = textureLoader.load("img/tree0.png");
+        const material = new THREE.SpriteMaterial({ map: texture,});
 
-        // 木0を作成(原点に作成)
-        var geometry = new THREE.PlaneGeometry(75, 100);
-        var tree0 = new THREE.Mesh(geometry, mat0);
-        scene.add(tree0);
+        // 木左
+        const sprite1 = new THREE.Sprite(material);
+        sprite1.scale.set(1,2,1);
+        sprite1.position.set(-1,1,0); //位置を指定
+        scene.add(sprite1);
 
-        // 木1テクスチャー読み込み
-        var texture1 = textureLoader.load("img/tree1.png");
-        var mat1 = new THREE.MeshLambertMaterial({transparent: true});
-        mat1.map = texture1;
+        // 木右
+        const sprite2 = new THREE.Sprite(material);
+        sprite2.scale.set(1,2,1);
+        sprite2.position.set(1,1,0); //位置を指定
+        scene.add(sprite2);
+        
+        update();
 
-        // 木1を作成(原点に作成)
-        var tree1 = new THREE.Mesh(geometry, mat1);
-        tree1.position.set(100, 0, 100);
-        scene.add(tree1);
-
-        // 木2テクスチャー読み込み
-        var texture2 = textureLoader.load("img/tree2.png");
-        var mat2 = new THREE.MeshLambertMaterial({transparent: true});
-        mat2.map = texture2;
-
-        // 木2を作成(原点に作成)
-        var tree2 = new THREE.Mesh(geometry, mat2);
-        tree2.position.set(-100, 0, 100);
-        tree2.rotation.set(0,1.7,0);
-        scene.add(tree2);
-
-        // 木3テクスチャー読み込み
-        var texture3 = textureLoader.load("img/tree3.png");
-        var mat3 = new THREE.MeshLambertMaterial({transparent: true});
-        mat3.map = texture3;
-
-        // 木3を作成(原点に作成)
-        var tree3 = new THREE.Mesh(geometry, mat3);
-        tree3.position.set(0, 0, 200);
-        tree2.rotation.set(0,1.7,0);
-        scene.add(tree3);
-
-        tick();
         // 毎フレーム時に実行されるループイベントです
-        function tick() {
+        function update() {
           // レンダリング
           renderer.render(scene, camera);
-          requestAnimationFrame(tick);
+          requestAnimationFrame(update);
         }
       }
     </script>
-  </head>
-
-  <body>
-    <canvas id="myCanvas"></canvas>
-  </body>
-</html>
+</body>
