エラー修正

--- a/lesson4/sample8-4.html
+++ b/lesson4/sample8-4.html
@@ -63,7 +63,7 @@
           const sprite = new THREE.Sprite(material);
           // ランダムな座標に配置
           sprite.position.x = 2 * (Math.random() - 0.5);
-          sprite.position.y = 0.5 * Math.random()
+          sprite.position.y = 0.5 * Math.random();
           sprite.position.z = 2 * (Math.random() - 0.5);
           // スケールを調整
           sprite.scale.set(0.5, 0.5, 0.5);
