タイトル変更

--- a/lesson4/sample8-4.html
+++ b/lesson4/sample8-4.html
@@ -5,9 +5,8 @@
     <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
   </head>
 <body>
- <h1>板ポリにテクスチャ―</h1>
- 板ポリにテクスチャ―貼ってみた<br>
- 非透過と透過
+ <h1>森を作成</h1>
+ ループで２０本の気を作った<br>
  <script>
       // ページの読み込みを待つ
       window.addEventListener('DOMContentLoaded', init);
