--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 </head>
 
 <body>
-<h1>2021年度CG演習
+<h1>2022年度CG演習
 </h1>
 <h2>講義内容</h2>
 <p><a href="lesson1/index.html">第５回　初めてのWebGL</a></p>
 <p><a href="lesson2/index.html">第６回　モデリングとシェーディング</a></p>
 <p><a href="lesson3/index.html">第７回　テクスチャマッピング</a></p>
-<p><a href="lesson4/index.html">第８回　インタラクティブとビルボード</a></p>
-<p><a href="lesson5/index.html">第１０回　キャラクターアニメーション</a></p>
+<p><a href="lesson4/index.html">第８回　ビルボード</a></p>
+<p><a href="lesson5/index.html">第１０回　スプライトとフォグ</a></p>
 <p><a href="lesson6/index.html">第１１回　パーティクル</a></p>
+<p><a href="lesson7/index.html">第１２回　モデルデータの読み込み</a></p>
 </body>
 </html>
