--- a/lesson5/sample5-3.html
+++ b/lesson5/sample5-3.html
@@ -1,94 +1,83 @@
-<!DOCTYPE html>
-<html lang="ja">
-  <html>
-    <head>
-      <meta charset="utf-8" />
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-      <script src="OrbitControls.js"></script>
-      <script>
-        // ページの読み込みを待つ
-        window.addEventListener('load', init);
-  
-        function init() {
-          // サイズを指定
-          const width = 960;
-          const height = 540;
-  
-          // レンダラーを作成
-          const renderer = new THREE.WebGLRenderer({
-            canvas: document.querySelector('#myCanvas')
-          });
-          renderer.setSize(width, height);
-          // 光源が関係ないので
-          renderer.setClearColor(0xf9f9f9, 1.0);
-  
-          // シーンを作成
-          const scene = new THREE.Scene();
-          // シーン全体のフォグ
-          scene.fog = new THREE.Fog(0xf9f9f9, 800, 2000);
-  
-          // カメラを作成
-          const camera = new THREE.PerspectiveCamera(45, width / height);
-          // カメラの初期座標を設定
-          camera.position.set(0, 0, 1000);
-  
-          // カメラコントローラーを作成
-          const controls = new THREE.OrbitControls(camera);
-          controls.autoRotate = true;
-  
-          // helper
-          const gridHelper = new THREE.GridHelper(1000,20); // size, step
-          scene.add(gridHelper);
-          const axisHelper = new THREE.AxisHelper(1000); //軸の長さ　X：赤、Y：緑、z：青
-          scene.add(axisHelper);
-  
-          // マテリアルを作成する
-          const material = new THREE.SpriteMaterial({
-            map: new THREE.TextureLoader().load('img/star.png')
-          });
-          // フォグ（霞）を有効にする
-          material.fog = true;
-  
-          // ビルボードを作成
-          for (let i = 0; i < 100; i++) {
-            const sprite = new THREE.Sprite(material);
-            // ランダムな座標に配置
-            sprite.position.x = 1000 * (Math.random() - 0.5);
-            sprite.position.y = 300 * Math.random() - 150;
-            sprite.position.z = 1000 * (Math.random() - 0.5);
-            // 必要に応じてスケールを調整
-            sprite.scale.set(50, 50, 50);
-  
-            scene.add(sprite);
-          }
-  
-          //球
-          const sphereGeometry = new THREE.SphereGeometry( 150, 32, 32 ); 
-          //半径、垂直方向の分割数、水平方向の分割数
-          const textureLoader = new THREE.TextureLoader();
-          const erathtexture = textureLoader.load("img/earth.png");
-          const sphereMaterial = new THREE. MeshPhongMaterial();
-          sphereMaterial.map = erathtexture;
-          const sphere = new THREE.Mesh( sphereGeometry, sphereMaterial );
-          scene.add( sphere );
-  
-          //光源はspriteのみならば不要！
-          // 光源（環境光）
-          const ambientLight = new THREE.AmbientLight(0xffffff, 1.0);
-          scene.add(ambientLight);
-  
-          tick();
-  
-          // 毎フレーム時に実行されるループイベントです
-          function tick() {
-            // レンダリング
-            renderer.render(scene, camera);
-            requestAnimationFrame(tick);
-          }
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
+  </head>
+<body>
+ <h1>森を作成</h1>
+ ループで２０本の気を作った<br>
+ <script>
+      // ページの読み込みを待つ
+      window.addEventListener('DOMContentLoaded', init);
+
+      function init() {
+        // サイズを指定
+        const width = 800
+        const height = 600;
+
+        // レンダラーを作成
+        var renderer = new THREE.WebGLRenderer();
+        document.body.appendChild(renderer.domElement);
+        renderer.setSize(width, height);
+        // 背景の色を設定
+        renderer.setClearColor(0x0000dd);
+
+
+        // シーンを作成
+        const scene = new THREE.Scene();
+
+        // カメラを作成
+        const camera = new THREE.PerspectiveCamera(45, width / height);
+        // カメラの初期座標を設定
+        camera.position.set(0, 0, 5);
+
+        // カメラコントローラーを作成
+        const controls = new THREE.OrbitControls(camera, document.body); 
+        
+        // 平行光源1
+        var directionalLight1 = new THREE.DirectionalLight(0xffffff);
+        directionalLight1.position.set(10, 10, 10);
+        // シーンに追加
+        scene.add(directionalLight1);
+        // 平行光源2
+        var directionalLight2 = new THREE.DirectionalLight(0x888888);
+        directionalLight2.position.set(-10, -10, 10);
+        // シーンに追加
+        scene.add(directionalLight2);
+
+        // helper
+        const gridHelper = new THREE.GridHelper(2,10); // size, step
+        scene.add(gridHelper);
+        const axisHelper = new THREE.AxisHelper(2); //軸の長さ　X：赤、Y：緑、z：青
+        scene.add(axisHelper);
+
+        // 星をスプライトで作成
+        var textureLoader = new THREE.TextureLoader();  
+        var texture = textureLoader.load("img/star.png");
+        const material = new THREE.SpriteMaterial({ map: texture,});
+
+        // 森を作成
+        for (let i = 0; i < 20; i++) {
+          const sprite = new THREE.Sprite(material);
+          // ランダムな座標に配置
+          sprite.position.x = 2 * (Math.random() - 0.5);
+          sprite.position.y = 0.5 * Math.random();
+          sprite.position.z = 2 * (Math.random() - 0.5);
+          // スケールを調整
+          sprite.scale.set(0.5, 0.5, 0.5);
+
+          scene.add(sprite);
         }
-      </script>
-    </head>
-    <body>
-      <canvas id="myCanvas"></canvas>
-    </body>
-  </html>
+        
+        update();
+
+        // 毎フレーム時に実行されるループイベントです
+        function update() {
+          // レンダリング
+          renderer.render(scene, camera);
+          requestAnimationFrame(update);
+        }
+      }
+    </script>
+</body>
